--- a/index.html
+++ b/index.html
@@ -184,25 +184,37 @@
     <button class="button-hero-close" type="button" data-modal-close>
     <svg  class="icon-cross" width="8" height="8"><use href="./images/icons.svg#icon-cross"></use></svg>
     </button>
-    <div class="form">
-     <form class="">
-          <p>Leave your contacts and we will call you back</p>
+     <form class="form ">
+        <div class="form-text">
+          <p class="text-form">Leave your contacts and we will call you back</p>
+        </div>
         <div class="form-pitch">
+
         <label for="name">Name</label>
         <input type="name" name="name" id="name"/>
+        </div>
+        <div class="form-pitch">
         <label for="tel">Phone</label>
         <input type="tel" name="phone" id="tel">
+        </div>
+        <div class="form-pitch">
         <label for="mail">Email</label>
         <input type="email" name="mail" id="mail">
-        <label for="coment">Comment</label>
-        <textarea type="text-area" name="comment" id="coment" rows="4" placeholder="Text input"></textarea>
         </div>
+        <div class="form-pitch">
+        <label for="coment">Comment</label>
+        </div>
+        <div class="textarea">
+        <textarea type="text-area" name="comment" id="coment" placeholder="Text input"></textarea>
+        </div>
+        <div class="checkbox">
           <input type="checkbox" name="policy" value="policy" id="policy">
-          <label for="policy"> I accept the terms and conditions of the Privacy Policy</label>
-        <button type="submit">Send</button>
+          <label for="policy">I accept the terms and conditions of the Privacy Policy</label>
+        </div>
+        <div class="button-form-send">
+        <button class="button-form" type="submit">Send</button>
+        </div>
      </form>
-    </div>
-    </div>
     </div>
 <script src="./js/modal.js"></script>
 </body>
