--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <div class="subscribe">
 <h3 class="title-subscribe">Subscribe</h3>
 <input class="footer-subscribe" type="email" name="email" placeholder="E-mail">
-<button class="button-subscribe-footer" type="button">Subscribe</button>
+<button class="button-subscribe-footer" type="button">Subscribe <span class="block-ison-subscribe"><svg class="icon-subscribe" width="24" height="20"><use href="./images/icons.svg#icon-icon-send"></use></svg></span></button>
 </div>
 </div>
 </footer>
