--- a/portfolio.html
+++ b/portfolio.html
@@ -198,6 +198,11 @@
             <li class="footer-social-item"> <a class="footer-social-link" href="https://www.linkedin.com/" target="_blank"><svg width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg> </a></li>
         </ul>
     </div>
+    <div class="subscribe">
+    <h3 class="title-subscribe">Subscribe</h3>
+    <input class="footer-subscribe" type="email" name="email" placeholder="E-mail">
+    <button class="button-subscribe-footer" type="button">Subscribe <span class="block-ison-subscribe"><svg class="icon-subscribe" width="24" height="20"><use href="./images/icons.svg#icon-icon-send"></use></svg></span></button>
+    </div>
     </div>
     </footer>
 </body>
