--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
           <p class="text-form">Leave your contacts and we will call you back</p>
         </div>
         <div class="form-pitch">
-
-        <label for="name">Name</label>
-        <input type="name" name="name" id="name"/>
+        <label for="name" class="form-label">Name</label>
+        <input type="name" name="name" id="name" class="form-input"/>
+        <svg class="icon-form" width="12" height="12"><use href="./images/icons.svg#icon-icon-modal-email"></use></svg>
         </div>
         <div class="form-pitch">
         <label for="tel">Phone</label>
@@ -206,10 +206,8 @@
         <label for="mail">Email</label>
         <input type="email" name="mail" id="mail">
         </div>
-        <div class="form-pitch">
-        <label for="coment">Comment</label>
-        </div>
         <div class="textarea">
+            <label for="coment">Comment</label>
         <textarea type="text-area" name="comment" id="coment" placeholder="Text input"></textarea>
         </div>
         <div class="checkbox">
