--- a/index.html
+++ b/index.html
@@ -196,24 +196,27 @@
         <div class="form-pitch">
         <label for="name" class="form-label">Name</label>
         <input type="name" name="name" id="name" class="form-input"/>
-        <svg class="icon-form" width="12" height="12"><use href="./images/icons.svg#icon-icon-modal-email"></use></svg>
+        <svg class="icon-form" width="18" height="18"><use href="./images/icons.svg#icon-icon-human"></use></svg>
         </div>
         <div class="form-pitch">
         <label for="tel">Phone</label>
         <input type="tel" name="phone" id="tel">
+        <svg class="icon-form-big" width="18" height="24"><use href="./images/icons.svg#icon-icon-phone"></use></svg>
         </div>
         <div class="form-pitch">
         <label for="mail">Email</label>
         <input type="email" name="mail" id="mail">
+        <svg class="icon-form-big" width="18" height="24"><use href="./images/icons.svg#icon-icon-email"></use></svg>
         </div>
         <div class="textarea">
             <label for="coment">Comment</label>
         <textarea type="text-area" name="comment" id="coment" placeholder="Text input"></textarea>
         </div>
-        <div class="checkbox">
-          <input type="checkbox" name="policy" value="policy" id="policy">
-          <label for="policy">I accept the terms and conditions of the Privacy Policy</label>
-        </div>
+        <label class="checkbox-pitch" for="policy">
+          <input class="checkbox" type="checkbox" name="policy" value="policy" id="policy">
+          <span class="border-checkbox"></span>
+          <span class="text-checkbox"> I accept the terms and conditions of the <a class="form-privacy" href="">Privacy Policy</a> </span>
+        </label>
         <div class="button-form-send">
         <button class="button-form" type="submit">Send</button>
         </div>
