--- a/portfolio.html
+++ b/portfolio.html
@@ -199,9 +199,10 @@
         </ul>
     </div>
     <div class="subscribe">
-    <h3 class="title-subscribe">Subscribe</h3>
+    <label class="title-subscribe">Subscribe</label>
     <input class="footer-subscribe" type="email" name="email" placeholder="E-mail">
-    <button class="button-subscribe-footer" type="button">Subscribe <span class="block-ison-subscribe"><svg class="icon-subscribe" width="24" height="20"><use href="./images/icons.svg#icon-icon-send"></use></svg></span></button>
+    
+    <button class="button-subscribe-footer" type="submit">Subscribe <span class="block-ison-subscribe"><svg class="icon-subscribe" width="24" height="20"><use href="./images/icons.svg#icon-icon-send"></use></svg></span></button>
     </div>
     </div>
     </footer>
