--- a/index.html
+++ b/index.html
@@ -177,12 +177,13 @@
         <li class="footer-social-item"> <a class="footer-social-link" href="https://www.linkedin.com/" target="_blank"><svg width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg> </a></li>
     </ul>
 </div>
-<div class="subscribe">
+<form class="subscribe">
+<div class="subscribe-form"> 
 <label class="title-subscribe">Subscribe</label>
 <input class="footer-subscribe" type="email" name="email" placeholder="E-mail">
-
-<button class="button-subscribe-footer" type="submit">Subscribe <span class="block-ison-subscribe"><svg class="icon-subscribe" width="24" height="20"><use href="./images/icons.svg#icon-icon-send"></use></svg></span></button>
 </div>
+<button class="button-subscribe-footer" type="submit">Subscribe <span class="block-ison-subscribe"><svg class="icon-subscribe" width="24" height="20"><use href="./images/icons.svg#icon-icon-send"></use></svg></span></button>
+</form>
 </div>
 </footer>
 <div class="backdrop is-hidden" data-modal>
@@ -190,7 +191,7 @@
     <button class="button-hero-close" type="button" data-modal-close>
     <svg  class="icon-cross" width="8" height="8"><use href="./images/icons.svg#icon-cross"></use></svg>
     </button>
-     <form class="form ">
+     <form class="form">
         <div class="form-text">
           <p class="text-form">Leave your contacts and we will call you back</p>
         </div>
